# hits2025_ML1

./: .gitignore  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: results.csv
data/model/: catboost_model.cbm  trained_model.txt
model/: logger.py  model.py
notebooks/: choosing_best_algo.ipynb  data_analysis.ipynb  submission.csv
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
