[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Sofya Kovalenko",email = "sofyakovalenko2005610@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "catboost (>=1.2.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
